<resources>
    <string name="app_name">上市公司财务查询平台</string>
    <string name="login_page">登陆界面</string>
    <string name="login_BG">login_BG</string>
    <string name="login_username1">用户名:</string>
    <string name="login_username2">请输入你的用户名</string>
    <string name="login_password1">密 码:</string>
    <string name="login_password2">请输入你的密码</string>
    <string name="login_submit">登     录</string>
    <string name="login_password_forgotten">忘记密码?</string>
    <string name="login_go_to_register">没有账号，去注册-></string>

    <string name="register_BG">register_BG</string>
    <string name="register_page">注册界面</string>
    <string name="register_username1">用户名:</string>
    <string name="register_username2">请输入你的用户名</string>
    <string name="register_password1">密 码:</string>
    <string name="register_password2">请输入你的密码</string>
    <string name="register_confirm_password1">确认密码:</string>
    <string name="register_confirm_password2">请再次输入你的密码</string>
    <string name="register_submit">注 册</string>
    <string name="register_email1">电子邮箱:</string>
    <string name="register_email2">请输入你的电子邮箱</string>
    <string name="register_send_code">发送验证码</string>
    <string name="register_code1">验证码:</string>
    <string name="register_code2">请输入对应的验证码</string>
    <string name="register_go_to_login">已有帐号,去登录</string>
    <string name="Kline_volTxt">成交量</string>
    <string name="Kline_openTxt">开盘价</string>
    <string name="Kline_closeTxt">收盘价</string>
    <string name="Kline_amountTxt">成交额</string>
    <string name="Kline_lowTxt">最低价</string>
    <string name="Kline_highTxt">最高价</string>
    <string name="kline_news">新闻</string>
    <string name="kline_handicap">盘口</string>
    <string name="kline_capital">资金</string>
    <string name="kline_annoucement">公告</string>
    <string name="kline_finance">财务</string>
    <string name="kline_briefIntro">简况</string>
    <string name="user_fans">粉丝</string>
    <string name="user_follow">关注</string>
    <string name="user_dynamic">动态</string>
    <string name="fa_star_o">&#xf006;</string>
    <string name="fa_newspaper_o">&#xf1ea;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_history">&#xf1da;</string>
    <string name="fa_list_alt">&#xf03a;</string>
    <string name="fa_gear">&#xf013;</string>
    <string name="fa_warning">&#xf071;</string>
    <string name="fa_phone">&#xf095;</string>
    <string name="fa_send">&#xf1d8;</string>
    <string name="fa_envelope_o">&#xf003;</string>
    <string name="fa_envelope">&#xf0e0;</string>
    <string name="fa_area_chart">&#xf1fe;</string>
    <string name="fa_line_chart">&#xf201;</string>
    <string name="fa_moon_o">&#xf186;</string>
    <string name="fa_sun_o">&#xf185;</string>
    <string name="fa_pencil">&#xf040;</string>
    <string name="fa_blind">&#xf29d;</string>
    <string name="fa_bolt">&#xf0e7;</string>
    <string name="fa_first_order">&#xf2b0;</string>
    <string name="user_userstock">自选股票</string>
    <string name="user_history">浏览历史</string>
    <string name="user_topics">看看热点</string>
    <string name="user_setting">用户设置</string>
    <string name="user_predictor">预测股票</string>
    <string name="user_warnings">走势警告</string>
    <string name="user_feedback">用户反馈</string>
    <string name="user_consultation">客服咨询</string>
    <string name="user_notes">我的笔记</string>
    <string name="user_friendlyMode">新手模式</string>
    <string name="any_all">全部</string>
    <string name="any_back"><![CDATA[<]]></string>
    <string name="any_dark_mode">黑夜模式</string>
    <string name="any_on">On</string>
    <string name="any_off">Off</string>
    <string name="any_changePSW">修改密码</string>
    <string name="any_go"><![CDATA[>]]></string>
    <string name="any_about_us">关于我们</string>
    <string name="any_log_out">退出登录</string>
    <string name="notes_add_notes">添加笔记</string>
    <string name="change_psw">修改密码</string>
    <string name="verify_email_hint">请输入绑定的电子邮箱</string>
    <string name="changePSW_new">请输入你的新密码</string>
    <string name="changePSW_confirm">请再次输入你的新密码</string>
    <string name="changePSW_new_text">新密码:</string>
    <string name="main_follow">关注</string>
    <string name="main_userstock">自选股</string>
    <string name="main_topics">看热点</string>
    <string name="main_charts">龙虎榜</string>
    <string name="any_mainpage">主页</string>
    <string name="any_tools">工具</string>
    <string name="any_user">我的</string>
    <string name="fa_user_circle">&#xf2bd;</string>
    <string name="fa_calculator">&#xf1ec;</string>
    <string name="fa_money">&#xf0d6;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_chevron_left">&#xf053;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_window_close">&#xf2d3;</string>
    <string name="any_stock_code">股票代码</string>
    <string name="predictor_days_to_predict">预测天数</string>
    <string name="predictor_predict">预测</string>
    <string name="any_login">登录</string>
    <string name="any_search_result">搜索结果</string>
</resources>